<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".act.YMWYIPCAidl2Activity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/input_something"
            android:id="@+id/mMessageEt"
            android:layout_margin="10dp"
            tools:ignore="Autofill,TextFields"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/mMessageEt"
            app:layout_constraintTop_toBottomOf="@id/mMessageEt"
            app:layout_constraintRight_toLeftOf="@id/mUnbindBtn"
            android:id="@+id/mBindBtn"
            android:text="@string/bind"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mUnbindBtn"
            app:layout_constraintLeft_toRightOf="@id/mBindBtn"
            app:layout_constraintTop_toTopOf="@id/mBindBtn"
            app:layout_constraintRight_toLeftOf="@id/mSendBtn"
            android:text="@string/unbind"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mSendBtn"
            app:layout_constraintRight_toRightOf="@id/mMessageEt"
            app:layout_constraintLeft_toRightOf="@id/mUnbindBtn"
            app:layout_constraintTop_toTopOf="@id/mBindBtn"
            android:text="@string/send_message"
    />

    <ScrollView
            android:id="@+id/mResultSv"
            app:layout_constraintRight_toLeftOf="@id/mMessageEt"
            app:layout_constraintRight_toRightOf="@id/mMessageEt"
            app:layout_constraintTop_toBottomOf="@id/mSendBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingBottom="16dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/mResultTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>